# Tools

./: Cases.md
.github/workflows/: build-pdf-analyzer.yml
01_PDF邮件工具/: Readme.md  发送PDF邮件.bat
02_arxml/: ARXML阅读器.spec  README.md  build.py  pyproject.toml
02_arxml/examples/: output.dbc  sample.arxml
02_arxml/src/: __init__.py  arxml_parser.py  dbc_exporter.py  excel_exporter.py  gui.py  main.py
03_pdf2jpg/: PDF批量转JPG.spec  PDF转JPG工具.spec  Readme.md  pdf2jpg.py  pyproject.toml
04_发票识别工具/: README.md  excel_exporter.py  gui.py  invoice_parser.py  main.py  ocr_engine.py  pyproject.toml  requirements.txt  scanner.py
06_文件夹监控工具/: 使用说明.txt  启动监控.bat  文件夹监控.ps1  添加开机启动.bat  移除开机启动.bat
07_文件整理工具/: README.md  build_mac.py  config.py  file_organizer.py  logger.py  organizer_core.py  requirements.txt  test_organizer.py  智能文件整理工具.spec
08_答题打怪游戏/: Readme.md  demo_questions.csv  index.html
08_答题打怪游戏/css/: style.css
08_答题打怪游戏/js/: game.js
09_Catia测量点导出工具/: .gitignore  CHANGELOG.md  Readme.md  测量点导出工具.vbs
09_Catia测量点导出工具/examples/: example_usage.vbs
09_Catia测量点导出工具/src/: 测量点导出工具.vbs
10_SVW-Copilot-Word-Addin/: README.md  install-windows.bat  manifest-simple.xml  manifest.xml
11_PDF财务分析在线版/: package-lock.json  package.json
11_PDF财务分析在线版/src/: App.tsx
12_PDF财务分析离线版/: index.html  main.js  package-lock.json  package.json
12_PDF财务分析离线版/example/: 贸易业务财务分析月度报告（2026年2月）.docx
12_PDF财务分析离线版/release/: builder-effective-config.yaml
12_PDF财务分析离线版/src/: index.css
13_Kindle解码工具/: Readme.md  app.py  core_decryptor.py  main.py  pyproject.toml
(+18 files in other folders)
